fixed browser specific bugs added placeholder for IE9 fixed positioning in roles view for IE9-11 hid checkboxes via visibility for Firefox

--- a/css/profiler.css
+++ b/css/profiler.css
@@ -13,6 +13,7 @@ ul.profiler > li {
 ul.profiler > li > input.control-view,
 ul.profiler > li > input.control-edit,
 ul.profiler > li > input.control-delete {
+  visibility: hidden;
   position: absolute;
   top: 48px;
   right: 10px;
@@ -519,6 +520,9 @@ ul.profiler > li > div.view-roles > ul:nth-of-type(2) > li {
   transition: font-size 0.35s ease-in;
 }
 ul.profiler > li > div.view-roles > ul:nth-of-type(2) > li::before {
+  -webkit-transition: font-size 0.35s ease-in;
+  -moz-transition: font-size 0.35s ease-in;
+  -o-transition: font-size 0.35s ease-in;
   transition: font-size 0.35s ease-in;
 }
 ul.profiler > li > div.view-roles > ul > li[class^="glyphicon-"]::before,
@@ -616,7 +620,7 @@ ul.profiler > li.checked > input.control-view:checked ~ div.view-roles > h1 {
   transition: padding 0.35s ease-in, height 0.35s ease-in, font-size 0.35s ease-in;
 }
 ul.profiler > li.checked > input.control-view:checked ~ div.view-roles > ul:first-of-type {
-  top: initial;
+  top: auto;
   bottom: 10px;
   left: 4%;
   border-radius: 4px;
@@ -738,6 +742,7 @@ ul.profiler > li.checked > input.control-view:checked ~ div.view-roles > ul:nth-
   margin-right: 5px;
   margin-left: 5px;
   padding-top: 5px;
+  -webkit-padding-before: 4px;
   width: 25px;
   height: 25px;
   font-size: 17px;
