--- a/less/profiler-base.less
+++ b/less/profiler-base.less
@@ -13,6 +13,7 @@ ul.profiler {
 		> input.control-view,
 		> input.control-edit,
 		> input.control-delete {
+			visibility: hidden;
 			position: absolute;
 			top: 48px;
 			right: 10px;
